--- a/Makefile.linux
+++ b/Makefile.linux
@@ -5,7 +5,7 @@ CUDA_SDK_PATH     := ~/GPU\ Computing/C
 INCLUDES          += -I. -I$(CUDA_INSTALL_PATH)/include -I$(CUDA_SDK_PATH)/common/inc
 LIBS              := -L$(CUDA_INSTALL_PATH)/lib -L$(CUDA_SDK_PATH)/lib
 CFLAGS            := 
-NVCFLAGS          := -G -g --device-emulation
+NVCFLAGS          := -G -g
 LDFLAGS           := -lm -lcuda
 NVCC              := nvcc  
 CC                := gcc 
