--- a/Makefile.linux
+++ b/Makefile.linux
@@ -12,10 +12,10 @@ CC                := gcc
 
 all: c63enc c63dec
 
-c63enc: c63enc.o dsp.o tables.o io.o c63_write.o common.o me.o precode_me.o dct.o mc.o cuda_util.o
+c63enc: c63enc.o dsp.o tables.o io.o c63_write.o common.o me.o precode_me.o dct.o mc.o cuda_util.o mc_cpu.o
 	$(NVCC) $(NVCFLAGS) $^ -o $@ $(LIBS) 
 
-c63dec: c63dec.o dsp.o tables.o io.o common.o mc.o
+c63dec: c63dec.o dsp.o tables.o io.o common.o mc_cpu.o dct.o cuda_util.o mc.o me.o
 	$(NVCC) $(NVCFLAGS) $^ -o $@ $(LIBS) 
 
 %.o: %.c
