--- a/Makefile.linux
+++ b/Makefile.linux
@@ -12,14 +12,14 @@ CC                := gcc
 
 all: c63enc c63dec
 
-c63enc: c63enc.o dsp.o tables.o io.o c63_write.o common.o me.o precode_me.o dct.o mc.o cuda_util.o workqueue.o
+c63enc: c63enc.o dsp.o tables.o io.o c63_write.o common.o precode_me.o dct.o mc.o cuda_util.o workqueue.o me.cu me-log.o
 	$(NVCC) $(NVCFLAGS) $^ -o $@ $(LIBS) 
 
-c63dec: c63dec.o dsp.o tables.o io.o common.o dct.o cuda_util.o mc.o me.o
+c63dec: c63dec.o dsp.o tables.o io.o common.o dct.o cuda_util.o mc.o me.o me-log.o
 	$(NVCC) $(NVCFLAGS) $^ -o $@ $(LIBS) 
 
 %.o: %.c
-	$(CC) $(CFLAGS) $(INCLUDES) -c $< 
+	$(NVCC) $(CFLAGS) $(INCLUDES) -c $< 
 
 %.o: %.cu 
 	$(NVCC) $(NVCFLAGS) $(INCLUDES) -c $<
